acrescentei arquivos html e css  'melhores sites'

--- a/index-3.3.html
+++ b/index-3.3.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
     <title>Posicionamento de elementos - exercicio3.3</title>
-    <link rel="stylesheet" href="./style-3.3.css" />
+    <link rel="stylesheet" href="./style-3.3.css"/>
   </head>
   <body>
     <h1>Exercícios de fixação 3.3</h1>
